# ai-recipe-recommender

./: README.md  pyproject.toml  recipes.csv  recipes_recommendation.py
